@@ -66,7 +66,7 @@ JSON::PP = 4.11                 ; support for core bools
 Cpanel::JSON::XS = 4.38         ; support for core bools
 
 [Breaks]
-JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.017   ; is_uri_reference
+JSON::Schema::Modern::Vocabulary::OpenAPI = < 0.080   ; discriminator traversal error status
 JSON::Schema::Modern::Document::OpenAPI = < 0.079     ; error mode; traverse now accepts a third argument; identifiers is a hashref; anchors are no longer stored as separate resources
 OpenAPI::Modern = < 0.077                             ; ::Result boolean overload
 Mojolicious::Plugin::OpenAPI::Modern = < 0.014        ; ::Result boolean overload
